--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home - Estudio 286</title>
     <link rel="icon" href="imagenes/favicon-32x32.png" type="image/png">
+    <meta name="description" content="Estudio 286 es un estudio creativo multidisciplinario con base en Buenos Aires.">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
