--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="icon" href="imagenes/favicon-32x32.png" type="image/png">
     <meta name="description" content="Estudio 286 es un estudio creativo multidisciplinario con base en Buenos Aires.">
 
-    <!-- Bootstrap CSS -->
+    <!-- ================== BOOTSTRAP CSS ================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
           rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
 
-    <!-- Custom CSS -->
+    <!-- ================== CSS ================== -->
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
@@ -22,14 +22,14 @@
     <header>
         <img src="imagenes/logo286chico.png" alt="Logo del estudio de arquitectura">
 
-        <!-- Hamburger menu -->
+        <!-- Hamburger Menu -->
         <div class="hamburger" id="hamburger">
             <span></span>
             <span></span>
             <span></span>
         </div>
 
-        <!-- Navigation menu -->
+        <!-- Nav Menu -->
         <nav>
             <ul id="menu">
                 <li><a href="#">Home</a></li>
@@ -46,7 +46,7 @@
         </video>
     </div>
 
-    <!-- ===================== MAIN CONTENT ===================== -->
+    <!-- ===================== MAIN ===================== -->
     <main>
 
         <!-- Garabato / Qué hacemos -->
@@ -61,13 +61,12 @@
                 </p>
             </div>
             <div class="garabato2">
-                 <img src="imagenes/garabato2.png" alt="Garabato decorativo">
-                
+                <img src="imagenes/garabato2.png" alt="Garabato decorativo">
             </div>
         </section>
 
         <!-- ===================== CAROUSEL DE PROYECTOS ===================== -->
-        <section id="proyectosCarousel" class="carousel slide" data-bs-ride="carousel">
+        <section id="proyectosCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
 
             <div class="carousel-inner">
 
@@ -76,9 +75,7 @@
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
                         <img src="./imagenes/imagencarru1.jpg" class="d-block w-100 carousel-image" alt="Diseño de proyectos">
                         <p class="carousel-text mt-3 mt-md-0 ms-md-4">
-                            Investigamos y conceptualizamos a partir de las necesidades de cada proyecto, 
-                            acompañando a nuestros clientes en cada paso del proceso e integrando todas 
-                            sus aristas para crear no solo espacios, sino también objetos de diseño únicos.
+                            Investigamos y conceptualizamos a partir de las necesidades de cada proyecto, acompañando a nuestros clientes en cada paso del proceso e integrando todas sus aristas para crear no solo espacios, sino también objetos de diseño únicos.
                         </p>
                     </div>
                 </div>
@@ -88,9 +85,7 @@
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
                         <img src="./imagenes/imagencarru2.jpg" class="d-block w-100 carousel-image" alt="Proyectos integrales">
                         <p class="carousel-text mt-3 mt-md-0 ms-md-4">
-                            Para transformar cualquier espacio, gestionamos proyectos de forma integral, 
-                            abarcando desde la concepción del lugar y la planificación estratégica, hasta 
-                            el desarrollo de una identidad visual sólida que refleje su esencia única.
+                            Para transformar cualquier espacio, gestionamos proyectos de forma integral, abarcando desde la concepción del lugar y la planificación estratégica, hasta el desarrollo de una identidad visual sólida que refleje su esencia única.
                         </p>
                     </div>
                 </div>
@@ -101,16 +96,14 @@
                         <img src="./imagenes/proyectos/Milanga & Co. - Montevideo y Corrientes - 72.jpg" 
                              class="d-block w-100 carousel-image" alt="Gerenciamiento de obras">
                         <p class="carousel-text mt-3 mt-md-0 ms-md-4">
-                            Garantizamos la correcta ejecución de tus proyectos. Nos encargamos de la dirección y 
-                            el gerenciamiento de obras, para asegurar que cada diseño se materialice con precisión 
-                            y calidad, cumpliendo con los plazos establecidos.
+                            Garantizamos la correcta ejecución de tus proyectos. Nos encargamos de la dirección y el gerenciamiento de obras, para asegurar que cada diseño se materialice con precisión y calidad, cumpliendo con los plazos establecidos.
                         </p>
                     </div>
                 </div>
 
             </div>
 
-            <!-- Carousel controls -->
+            <!-- Carousel controles -->
             <button class="carousel-control-prev" type="button" data-bs-target="#proyectosCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Anterior</span>
@@ -143,6 +136,9 @@
 
     <!-- ===================== FOOTER ===================== -->
     <footer>
+        <div class="footer-left">
+            <img src="./imagenes/logo286chicoblanco.png" alt="Logo Estudio 286">
+        </div>
         <div class="footer-center">
             <p>Oficina 286, Palacio Barolo. Avenida de Mayo 1370, CABA, Buenos Aires, Argentina.</p>
         </div>
@@ -162,7 +158,7 @@
             crossorigin="anonymous"></script>
 
     <script>
-        // Hamburger menu toggle
+        // Menu hamburguesa
         document.addEventListener("DOMContentLoaded", function() {
             const hamburger = document.getElementById('hamburger');
             const menu = document.getElementById('menu');
