--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="garabato">
             <img src="imagenes/garabato.png" alt="Garabato decorativo">
             <div class="garabato-contenido">
-                <h1>¿QUÉ HACEMOS?</h1>
+                <h1>¡EXPLORÁ DISEÑO!</h1>
                 <p>
                     Somos un estudio creativo multidisciplinario con base en Buenos Aires, 
                     donde la arquitectura, el interiorismo y el diseño visual se unen a través 
@@ -138,7 +138,7 @@
             <img src="./imagenes/logo286chicoblanco.png" alt="Logo Estudio 286">
         </div>
         <div class="footer-center">
-            <p>Oficina 286, Palacio Barolo. Avenida de Mayo 1370, CABA, Buenos Aires, Argentina.</p>
+            <p>Oficina 286, Palacio Barolo. Avenida de Mayo 1370, CABA, Argentina.</p>
         </div>
         <div class="footer-social">
             <a href="https://wa.me/+542215046257">
